[package]
name = "NetworkManager-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "^0.3.7"
clap = { version = "^4.3.19", features = ["derive"] }
netdevice = "^0.1.1"
pnet = "^0.34.0"
tokio = { version = "^1.29.1", features = ["rt-multi-thread", "full"] }

local_net = {path = "src/local_net"}
libc = "^0.2.147"
rand = "^0.8.5"
default-net = "^0.17.0"
dhcproto = "^0.11.0"
rtnetlink = "0.13.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native mtune=native link-arg=-fuse-ld=lld"]
