[package]
name = "local_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
default-net = "0.16.2"
futures = "0.3.28"
netlink-packet-route = "0.17.0"
netlink-proto = "0.11.2"
rtnetlink = "0.13.1"
tokio = { version = "1.29.1", features = ["full"] }

